--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Setup GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }} # Token otomatis dari GitHub untuk autentikasi
+        github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }} # Token otomatis dari GitHub untuk autentikasi
         publish_dir: ./ # Folder yang akan di-publish (root project)
 
     - name: Deploy index.html
